--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -26,8 +26,16 @@
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
 
-        <a *ngIf="!isUserLoggedIn" class="nav-link" href="#">Sign in</a>
+        <a *ngIf="!isUserLoggedIn" (click)="signIn($event)" class="nav-link" href="#">Login</a>
       </li>
+
+
+      <li class="nav-item text-nowrap">
+
+        <a *ngIf="!isUserLoggedIn" (click)="signUp($event)" class="nav-link" href="#">Sign up</a>
+      </li>
+
+
       <li class="nav-item text-nowrap">
 
         <a *ngIf="isUserLoggedIn" href="#" class="nav-link" (click)="logout($event)">Sign out</a>
