--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,3 +1,60 @@
-<p>
-  signup works!
-</p>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+
+
+
+    <form name="signupForm" #f="ngForm" (ngSubmit)="signUp(f)">
+
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input required class="form-control" minlength="2" type="email" ngModel #name="ngModel" name="name" id="name">
+        <div *ngIf="name.dirty && name.touched && name.invalid">
+
+          <div class="alert-danger" *ngIf="name.errors.required">
+            The emailis required
+          </div>
+          <div class="alert-danger" *ngIf="name.errors.minlength">
+            The min length of password {{name.errors.minlength.requiredLength }} chars
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input required class="form-control" email type="email" ngModel #email="ngModel" name="email" id="email">
+        <div *ngIf="email.dirty && email.touched && email.invalid">
+
+          <div class="alert-danger" *ngIf="email.errors.required">
+            The email is required
+          </div>
+          <div class="alert-danger" *ngIf="email.errors.email">
+            The velue must be a valid email.
+          </div>
+        </div>
+      </div>
+
+
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input required class="form-control" minlength="6" ngModel type="password" #password="ngModel" name="password"
+               id="password">
+        <div *ngIf="password.dirty && password.touched && password.invalid">
+
+          <div class="alert-danger" *ngIf="password.errors.required">
+            The field first name is required
+          </div>
+          <div class="alert-danger" *ngIf="password.errors.minlength">
+            The min length of password {{password.errors.minlength.requiredLength }} chars
+          </div>
+
+        </div>
+      </div>
+
+      <div class="form-group text-center">
+        <button [disabled]="!f.valid" class="btn btn-primary">Sign up</button>
+      </div>
+
+
+    </form>
+  </div>
+</div>
