--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -36,8 +36,8 @@
       </li>
 
 
+      <li *ngIf="isUserLoggedIn" class="nav-item">{{username}}</li>
       <li class="nav-item text-nowrap">
-
         <a *ngIf="isUserLoggedIn" href="#" class="nav-link" (click)="logout($event)">Sign out</a>
       </li>
 
