--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,6 +1,8 @@
 <div class="row">
   <div class="col-md-6 offset-md-3">
-
+<h1>
+  Sign up
+</h1>
 
 
     <form name="signupForm" #f="ngForm" (ngSubmit)="signUp(f)">
